# Wether_Status_Gtest

./: varadic-template.cpp
Service/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
Service/ServiceDetails/: CMakeLists.txt  serviceInformation.cpp  serviceInformation.h  serviceInterface.h
Service/ServiceDetails/_test/: CMakeLists.txt  main.cpp  serviceTest.cpp
